# ssr-command-client

./: .gitignore  README.md  main.py  main.spec  package.bat  package.sh  pyproject.toml  ssr
funcitions/: Functions.py
shadowsocks/: common.py
shadowsocksr_cli/: functions.py  handle_utils.py  logger.py  main.py  parse_utils.py  update_utils.py
utils/: HandleSSRUtils.py  ParseUtils.py  SSRTestUtils.py
