[tool.poetry]
name = "ssr-command-client"
version = "0.1.0"
description = ""
authors = ["xinsheng <wangxinsh55@126.com>"]

[tool.poetry.dependencies]
python = "3.9.1"
certifi = "^2020.12.5"
PySocks = "^1.7.1"
qrcode = "^6.1"
six = "^1.15.0"
wcwidth = "^0.2.5"
chardet = "^4.0.0"
colorama = "^0.4.4"
urllib3 = "^1.26.2"
prettytable = "^2.0.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
